--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         A játék komolyra fordul - valami nagy baj történik.
         De ők nem hagyják magukat. Hiszen azért érkeztek, hogy jól érezzék magukat, ráadásul a rejtvényfejtésben is sok tapasztalatuk van: elhatározzák, hogy maguk oldják meg a titokzatos bűntényt.</p>
     <p>Premier : 2018 február 18</p>
-    <a class="cta-button" href="#">Megtekintés</a>
+    <a class="cta-button" href="https://www.youtube.com/watch?v=kjC1zmZo30U">Megtekintés</a>
   </section>
 
 </body>
