--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header>
 
   <section>
-    <h2>Éjsztakai játék</h2>
+    <h2>Éjszakai játék</h2>
     <div class="preview-container">
       <iframe class="preview-video" src="https://www.youtube.com/embed/eZRWmV36X7M" frameborder="0" allowfullscreen></iframe>
     </div>
